--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
   "name": "posthtml-parser",
-  "version": "0.0.0",
-  "description": "Parser for PostHTML",
+  "version": "0.1.0",
+  "description": "Parse HTML/XML to PostHTMLTree",
   "keywords": [
     "html",
     "xml",
-    "postproccessor",
     "parser",
-    "transform",
-    "transformations",
-    "preprocessor",
-    "processor",
-    "posthtml"
+    "posthtml",
+    "posthtmltree"
   ],
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run lint && npm run coverage",
+    "lint": "jshint . && jscs -v .",
+    "coverage": "istanbul cover --report text --report html --report lcov node_modules/mocha/bin/_mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/voischev/posthtml-parser.git"
+    "url": "git+https://github.com/posthtml/posthtml-parser.git"
   },
   "author": "Ivan Voischev <voischev.ivan@ya.ru>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/voischev/posthtml-parser/issues"
+    "url": "https://github.com/posthtml/posthtml-parser/issues"
   },
-  "homepage": "https://github.com/voischev/posthtml-parser#readme"
+  "homepage": "https://github.com/posthtml/posthtml-parser#readme",
+  "dependencies": {
+    "htmlparser2": "^3.8.3"
+  },
+  "devDependencies": {
+    "chai": "^3.3.0",
+    "istanbul": "^0.4.0",
+    "jscs": "^2.3.5",
+    "jshint": "^2.8.0",
+    "mocha": "^2.3.3"
+  }
 }
