add npm scripts

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "scripts": {
     "test": "npm run lint && npm run coverage",
     "lint": "jshint . && jscs -v .",
-    "coverage": "istanbul cover --report text --report html --report lcov node_modules/mocha/bin/_mocha"
+    "coverage": "istanbul cover --report text --report html --report lcov node_modules/mocha/bin/_mocha",
+    "preversion": "npm test",
+    "postversion": "git push && git push --tags && rm -rf coverage"
   },
   "repository": {
     "type": "git",
