--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
   },
   "homepage": "https://github.com/posthtml/posthtml-parser#readme",
   "dependencies": {
-    "htmlparser2": "^3.8.3"
+    "htmlparser2": "^3.8.3",
+    "isobject": "^2.1.0"
   },
   "devDependencies": {
     "chai": "^3.3.0",
     "istanbul": "^0.4.0",
     "jscs": "^2.3.5",
     "jshint": "^2.8.0",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "rewire": "^2.5.2",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0"
   }
 }
