--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,7 @@
-node_modules/
-test/
 npm-debug.log
 .editorconfig
-.jscsrc
-.jshintignore
-.jshintrc
+
+.nyc_output
+test/
+coverage/
+node_modules/
