--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
-sudo: false
 language: node_js
-node_js:
-  - "4.1"
-  - "0.12"
-  - "0.10"
 
-env:
-  global:
-    - ISTANBUL_COVERAGE: yes
+node_js:
+  - "stable"
+  - "lts/*"
+  - 6
+  - 4
 
 after_success:
   - npm i coveralls
-  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && echo "Coverage data was sent to coveralls!"
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
