--- a/package.json
+++ b/package.json
@@ -2,40 +2,40 @@
   "name": "posthtml-parser",
   "version": "0.3.0",
   "description": "Parse HTML/XML to PostHTMLTree",
+  "author": "Ivan Voischev <voischev.ivan@ya.ru>",
+  "license": "MIT",
+  "engines": {
+    "node": ">= 4"
+  },
+  "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
+  "dependencies": {
+    "htmlparser2": "^3.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.0.0",
+    "jsdoc-to-markdown": "^3.0.0",
+    "mocha": "^4.0.0",
+    "nyc": "^11.0.0",
+    "standard": "^10.0.0",
+    "standard-version": "^4.0.0"
+  },
+  "scripts": {
+    "lint": "standard --env mocha",
+    "test": "nyc node_modules/mocha/bin/_mocha",
+    "docs": "jsdoc2md lib/*.js > PARSER.md",
+    "clean": "rm -rf coverage .nyc_output",
+    "release": "standard-version"
+  },
   "keywords": [
     "html",
     "xml",
     "parser",
-    "posthtml",
-    "posthtmltree"
+    "posthtml"
   ],
-  "main": "index.js",
-  "scripts": {
-    "test": "npm run lint && npm run coverage",
-    "lint": "jshint . && jscs -v .",
-    "coverage": "istanbul cover --report text --report html --report lcov node_modules/mocha/bin/_mocha",
-    "preversion": "npm test",
-    "postversion": "git push && git push --tags && rm -rf coverage"
-  },
-  "repository": "posthtml/posthtml-parser",
-  "author": "Ivan Voischev <voischev.ivan@ya.ru>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/posthtml/posthtml-parser/issues"
-  },
-  "homepage": "https://github.com/posthtml/posthtml-parser#readme",
-  "dependencies": {
-    "htmlparser2": "^3.8.3",
-    "isobject": "^2.1.0"
-  },
-  "devDependencies": {
-    "chai": "^3.3.0",
-    "istanbul": "^0.4.0",
-    "jscs": "^2.3.5",
-    "jshint": "^2.8.0",
-    "mocha": "^2.3.3",
-    "rewire": "^2.5.2",
-    "sinon": "^1.17.4",
-    "sinon-chai": "^2.8.0"
-  }
+  "repository": "https://github.com/posthtml/posthtml-parser",
+  "bugs": "https://github.com/posthtml/posthtml-parser/issues",
+  "homepage": "https://github.com/posthtml/posthtml-parser#readme"
 }
