--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "homepage": "https://github.com/posthtml/posthtml-parser#readme",
   "dependencies": {
     "htmlparser2": "^3.9.2",
-    "isobject": "^2.1.0"
+    "isobject": "^2.1.0",
+    "object-assign": "^4.1.1"
   },
   "devDependencies": {
     "chai": "^3.3.0",
