--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "posthtml-parser",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "Parse HTML/XML to PostHTMLTree",
   "keywords": [
     "html",
@@ -13,7 +13,7 @@
   "types": "index.d.ts",
   "scripts": {
     "test": "npm run lint && npm run coverage",
-    "lint": "jshint . && jscs -v .",
+    "lint": "jshint . && jscs .",
     "coverage": "istanbul cover --report text --report html --report lcov node_modules/mocha/bin/_mocha",
     "preversion": "npm test",
     "postversion": "git push && git push --tags && rm -rf coverage"
@@ -26,17 +26,16 @@
   },
   "homepage": "https://github.com/posthtml/posthtml-parser#readme",
   "dependencies": {
-    "htmlparser2": "^3.9.2",
-    "object-assign": "^4.1.1"
+    "htmlparser2": "^3.9.2"
   },
   "devDependencies": {
-    "chai": "^3.3.0",
+    "chai": "^4.2.0",
     "istanbul": "^0.4.0",
-    "jscs": "^2.3.5",
-    "jshint": "^2.8.0",
-    "mocha": "^2.3.3",
-    "rewire": "^2.5.2",
-    "sinon": "^1.17.4",
-    "sinon-chai": "^2.8.0"
+    "jscs": "^3.0.7",
+    "jshint": "^2.10.3",
+    "mocha": "^6.2.2",
+    "rewire": "^4.0.1",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0"
   }
 }
