--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   ],
   "main": "index.js",
   "types": "index.d.ts",
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "scripts": {
     "test": "npm run lint && npm run coverage",
     "lint": "jshint . && jscs .",
@@ -20,6 +23,16 @@
   },
   "repository": "posthtml/posthtml-parser",
   "author": "Ivan Voischev <voischev.ivan@ya.ru>",
+  "contributors": [
+    {
+      "name": "Ivan Voischev",
+      "email": "voischev.ivan@ya.ru"
+    },
+    {
+      "name": "Ivan Demidov",
+      "email": "scrum@list.ru"
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/posthtml/posthtml-parser/issues"
@@ -37,5 +50,9 @@
     "rewire": "^5.0.0",
     "sinon": "^9.0.3",
     "sinon-chai": "^3.5.0"
+  },
+  "collective": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/posthtml"
   }
 }
