--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,5 @@ node_js:
   - "lts/*"
   - 10
 
-env:
-  global:
-    - ISTANBUL_COVERAGE: yes
-
 after_success:
-  - npm i coveralls
-  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && echo "Coverage data was sent to coveralls!"
+  - npm run coverage
