--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "test": "npm run lint && npm run coverage",
+    "version": "conventional-changelog -i changelog.md -s -r 0 && git add changelog.md && git commit -m \"build: update changelog\"",
+    "test": "mocha",
     "lint": "jshint . && jscs .",
-    "coverage": "istanbul cover --report text --report html --report lcov node_modules/mocha/bin/_mocha",
-    "preversion": "npm test",
-    "postversion": "git push && git push --tags && rm -rf coverage"
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": "posthtml/posthtml-parser",
   "author": "Ivan Voischev <voischev.ivan@ya.ru>",
@@ -42,14 +41,24 @@
     "htmlparser2": "^3.9.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "9.1.1",
+    "@commitlint/config-angular": "^9.1.2",
     "chai": "^4.2.0",
+    "husky": "^4.2.5",
     "istanbul": "^0.4.0",
     "jscs": "^3.0.7",
     "jshint": "^2.12.0",
+    "lint-staged": "^10.2.11",
     "mocha": "^8.1.1",
+    "nyc": "^15.1.0",
     "rewire": "^5.0.0",
+    "rimraf": "^3.0.0",
     "sinon": "^9.0.3",
     "sinon-chai": "^3.5.0"
+  },
+  "funding": {
+    "type": "patreon",
+    "url": "https://opencollective.com/posthtml"
   },
   "collective": {
     "type": "opencollective",
