--- a/package.json
+++ b/package.json
@@ -40,20 +40,20 @@
     "htmlparser2": "^3.9.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "9.1.1",
-    "@commitlint/config-angular": "^9.1.2",
-    "conventional-changelog-cli": "^2.0.34",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-angular": "^11.0.0",
     "chai": "^4.2.0",
-    "husky": "^4.2.5",
+    "conventional-changelog-cli": "^2.0.34",
+    "husky": "^4.3.0",
     "istanbul": "^0.4.0",
     "jscs": "^3.0.7",
     "jshint": "^2.12.0",
-    "lint-staged": "^10.2.11",
-    "mocha": "^8.1.1",
+    "lint-staged": "^10.5.0",
+    "mocha": "^8.2.0",
     "nyc": "^15.1.0",
     "rewire": "^5.0.0",
     "rimraf": "^3.0.0",
-    "sinon": "^9.0.3",
+    "sinon": "^9.2.0",
     "sinon-chai": "^3.5.0"
   },
   "funding": {
