build: change lint to eslint

--- a/package.json
+++ b/package.json
@@ -44,10 +44,9 @@
     "@commitlint/config-angular": "^11.0.0",
     "chai": "^4.2.0",
     "conventional-changelog-cli": "^2.0.34",
+    "eslint": "^7.12.1",
     "husky": "^4.3.0",
     "istanbul": "^0.4.0",
-    "jscs": "^3.0.7",
-    "jshint": "^2.12.0",
     "lint-staged": "^10.5.0",
     "mocha": "^8.2.0",
     "nyc": "^15.1.0",
