--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "version": "conventional-changelog -i changelog.md -s -r 0 && git add changelog.md",
-    "test": "mocha",
+    "test": "c8 mocha",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": "posthtml/posthtml-parser",
@@ -42,14 +42,13 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-angular": "^11.0.0",
+    "c8": "^7.3.5",
     "chai": "^4.2.0",
     "conventional-changelog-cli": "^2.0.34",
     "eslint": "^7.12.1",
     "husky": "^4.3.0",
-    "istanbul": "^0.4.0",
     "lint-staged": "^10.5.0",
     "mocha": "^8.2.0",
-    "nyc": "^15.1.0",
     "rewire": "^5.0.0",
     "rimraf": "^3.0.0",
     "sinon": "^9.2.0",
