--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "scripts": {
     "version": "conventional-changelog -i changelog.md -s -r 0 && git add changelog.md",
-    "test": "c8 mocha",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "test": "c8 mocha"
   },
   "repository": "posthtml/posthtml-parser",
   "author": "Ivan Voischev <voischev.ivan@ya.ru>",
