--- a/.editorconfig
+++ b/.editorconfig
@@ -1,22 +1,19 @@
-# This file is for unifying the coding style for different editors and IDEs.
-# More information at http://EditorConfig.org
-
-# No .editorconfig files above the root directory
 root = true
 
 [*]
-charset = utf-8
+indent_style = space
 indent_size = 4
 end_of_line = lf
-indent_style = space
+charset = utf-8
+quote_type = single
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{bemjson.js,deps.js}]
-indent_size = 4
-
-[{bower,package}.json]
+[{package.json,*.yml,*.jade,*.pss,*.css,*.js,*.md,.*,*.ts}]
 indent_size = 2
+
+[{changelog.md,.*}]
+insert_final_newline = false
 
 [*.md]
 trim_trailing_whitespace = false
