--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "version": "conventional-changelog -i changelog.md -s -r 0 && git add changelog.md",
-    "test": "c8 mocha"
+    "test": "xo && c8 mocha"
   },
   "repository": "posthtml/posthtml-parser",
   "author": "Ivan Voischev <voischev.ivan@ya.ru>",
@@ -44,14 +44,14 @@
     "c8": "^7.3.5",
     "chai": "^4.2.0",
     "conventional-changelog-cli": "^2.0.34",
-    "eslint": "^7.12.1",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.0",
     "mocha": "^8.2.0",
     "rewire": "^5.0.0",
     "rimraf": "^3.0.0",
     "sinon": "^9.2.0",
-    "sinon-chai": "^3.5.0"
+    "sinon-chai": "^3.5.0",
+    "xo": "^0.34.1"
   },
   "funding": {
     "type": "patreon",
