--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ quote_type = single
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{package.json,*.yml,*.jade,*.pss,*.css,*.js,*.md,.*,*.ts}]
+[{*.json,*.yaml,*.yml,*.jade,*.pss,*.css,*.js,*.md,.*,*.ts}]
 indent_size = 2
 
 [{changelog.md,.*}]
