--- a/package.json
+++ b/package.json
@@ -2,6 +2,34 @@
   "name": "posthtml-parser",
   "version": "0.6.0",
   "description": "Parse HTML/XML to PostHTMLTree",
+  "license": "MIT",
+  "repository": "posthtml/posthtml-parser",
+  "homepage": "https://github.com/posthtml/posthtml-parser#readme",
+  "bugs": {
+    "url": "https://github.com/posthtml/posthtml-parser/issues"
+  },
+  "author": "Ivan Voischev <voischev@posthtml.org>",
+  "contributors": [
+    {
+      "name": "Ivan Voischev",
+      "email": "voischev@posthtml.org"
+    },
+    {
+      "name": "Ivan Demidov",
+      "email": "scrum@posthtml.org"
+    }
+  ],
+  "main": "dist",
+  "engines": {
+    "node": ">=10"
+  },
+  "scripts": {
+    "version": "conventional-changelog -i changelog.md -s -r 0 && git add changelog.md",
+    "build": "rm -rf dist && tsup src/*.ts --format cjs --dts --minify",
+    "dev": "npm run build -- --watch",
+    "test": "xo && c8 ava",
+    "pretest": "clinton"
+  },
   "keywords": [
     "html",
     "xml",
@@ -9,56 +37,29 @@
     "posthtml",
     "posthtmltree"
   ],
-  "main": "index.js",
-  "types": "index.d.ts",
-  "engines": {
-    "node": ">=10.0.0"
-  },
-  "scripts": {
-    "version": "conventional-changelog -i changelog.md -s -r 0 && git add changelog.md",
-    "test": "xo && c8 mocha"
-  },
-  "repository": "posthtml/posthtml-parser",
-  "author": "Ivan Voischev <voischev.ivan@ya.ru>",
-  "contributors": [
-    {
-      "name": "Ivan Voischev",
-      "email": "voischev.ivan@ya.ru"
-    },
-    {
-      "name": "Ivan Demidov",
-      "email": "scrum@list.ru"
-    }
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/posthtml/posthtml-parser/issues"
-  },
-  "homepage": "https://github.com/posthtml/posthtml-parser#readme",
   "dependencies": {
-    "htmlparser2": "^5.0.1"
+    "htmlparser2": "^6.0.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config-ts": "^0.4.3",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-angular": "^11.0.0",
-    "c8": "^7.3.5",
-    "chai": "^4.2.0",
+    "@types/node": "^14.14.25",
+    "ava": "^3.13.0",
+    "c8": "^7.5.0",
+    "clinton": "^0.14.0",
     "conventional-changelog-cli": "^2.0.34",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.0",
-    "mocha": "^8.2.0",
+    "esbuild-register": "^2.0.0",
+    "eslint": "^7.19.0",
+    "esm": "^3.2.25",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
     "rewire": "^5.0.0",
     "rimraf": "^3.0.0",
-    "sinon": "^9.2.0",
-    "sinon-chai": "^3.5.0",
-    "xo": "^0.30.0"
+    "ts-node": "^9.0.0",
+    "tsup": "^3.7.1",
+    "typescript": "^4.0.5",
+    "xo": "^0.37.1"
   },
-  "funding": {
-    "type": "patreon",
-    "url": "https://opencollective.com/posthtml"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/posthtml"
-  }
+  "types": "types/index.d.ts"
 }
