--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-  "target": "es2019",
-  "lib": ["ESNext"],
-  "module": "esnext",
+  "target": "es2018",
+  "lib": ["es2018"],
+  "module": "commonjs",
   "esModuleInterop": true,
   "moduleResolution": "node",
   "strict": true,
