build: perf config for ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
   "target": "es2018",
-  "lib": ["es2018"],
-  "module": "commonjs",
+  "lib": ["ESNext"],
   "esModuleInterop": true,
   "moduleResolution": "node",
   "strict": true,
