--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "build": "rm -rf dist && tsup src/*.ts --minify",
     "dev": "npm run build -- --watch",
     "test": "xo && c8 ava",
-    "pretest": "clinton"
+    "pretest": "clinton",
+    "prepare": "npm run build"
   },
   "keywords": [
     "html",
