--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "posthtmltree"
   ],
   "dependencies": {
-    "htmlparser2": "github:fb55/htmlparser2#5ab080e67833e97e58a8b3d6dc7364aceb7dd5cb"
+    "htmlparser2": "^7.0.0"
   },
   "devDependencies": {
     "@antfu/eslint-config-ts": "^0.4.3",
