Add "files" property

--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "typescript": "^4.0.5",
     "xo": "^0.37.1"
   },
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ]
 }
