Decrease package size
A version with fixed order in package.json

#85

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "pretest": "clinton",
     "prepare": "npm run build"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "html",
     "xml",
