--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "version": "conventional-changelog -i changelog.md -s -r 0 && git add changelog.md",
     "build": "rm -rf dist && tsup src/*.ts --dts --minify",
     "dev": "npm run build -- --watch",
-    "test": "xo && c8 ava",
+    "test": "vitest run --coverage",
     "prepare": "npm run build"
   },
   "files": [
@@ -48,8 +48,7 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-angular": "^11.0.0",
     "@types/node": "^14.14.25",
-    "ava": "^3.13.0",
-    "c8": "^7.5.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "conventional-changelog-cli": "^2.0.34",
     "esbuild-register": "^2.0.0",
     "eslint": "^7.19.0",
@@ -61,6 +60,7 @@
     "ts-node": "^9.0.0",
     "tsup": "^3.7.1",
     "typescript": "^4.0.5",
+    "vitest": "^0.34.6",
     "xo": "^0.37.1"
   },
   "types": "dist/index.d.ts"
