--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "build": "rm -rf dist && tsup src/*.ts --dts --minify",
     "dev": "npm run build -- --watch",
     "test": "vitest run --coverage",
-    "prepare": "npm run build"
+    "prepare": "husky install && npm run build",
+    "lint": "eslint . --ext .ts"
   },
   "files": [
     "dist"
@@ -41,27 +42,27 @@
     "posthtmltree"
   ],
   "dependencies": {
-    "htmlparser2": "^7.1.1"
+    "htmlparser2": "^9.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config-ts": "^0.4.3",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-angular": "^11.0.0",
-    "@types/node": "^14.14.25",
+    "@commitlint/cli": "^18.0.0",
+    "@commitlint/config-angular": "^18.0.0",
+    "@types/node": "^20.8.8",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
     "@vitest/coverage-v8": "^0.34.6",
-    "conventional-changelog-cli": "^2.0.34",
-    "esbuild-register": "^2.0.0",
-    "eslint": "^7.19.0",
+    "conventional-changelog-cli": "^4.1.0",
+    "esbuild-register": "^3.5.0",
+    "eslint": "^8.52.0",
     "esm": "^3.2.25",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "rewire": "^5.0.0",
-    "rimraf": "^3.0.0",
-    "ts-node": "^9.0.0",
-    "tsup": "^3.7.1",
-    "typescript": "^4.0.5",
-    "vitest": "^0.34.6",
-    "xo": "^0.37.1"
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
+    "rewire": "^7.0.0",
+    "rimraf": "^5.0.5",
+    "ts-node": "^10.9.1",
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   },
   "types": "dist/index.d.ts"
 }
